--- a/강의 자료/문서 정리/0102 월요일.md
+++ b/강의 자료/문서 정리/0102 월요일.md
@@ -3,18 +3,17 @@
 강사님 : `윤 성관 교수님` ( admin@lingostar.co.kr ) 
 
 ## < 홈페이지 정보 >
-1. https:developer.apple.com/
-2. http:schoology.com/
+1. [애플 개발자 사이트](https://developer.apple.com/)
+2. [수업 강의실 사이트](http://schoology.com/)
 
 ## < 쿠폰 정보 >
-1. AppPrototypig : CAU_2017_1
-2. iOS Dev Swift Basic : CAU_2017_1
-3. App Store Redeem for Auto Layout Tutor 앱 북
-4. Remote Support
+1. [X] AppPrototypig : CAU_2017_1
+2. [X] iOS Dev Swift Basic : CAU_2017_1
+3. [ ] App Store Redeem for Auto Layout Tutor 앱 북
+4. [ ] Remote Support
 
 ## < iOS 가이드라인 문서 >
-1. iOS HIG ( Human Interface Guideline ) -> 이 가이드라인에 위배되면, 앱스토어 리젝 당함
--> 주소 : https:developer.apple.com_ios_human-interface-guidelines_overview_design-principles/
+1. [iOS HIG ( Human Interface Guideline )](https://developer.apple.com/ios/human-interface-guidelines/overview/design-principles/) -> 이 가이드라인에 위배되면, 앱스토어 리젝 당함
 
 ### - 만들지 못하는 앱들… -
 1. 단체, 기부 관련 앱
@@ -22,3 +21,4 @@
 3. 핸드폰의 위치 추적 기능(Co-location) 을 긴급 구조용으로 쓰지 말 것 ( 신뢰성을 주지 않음 )
 4. 오디오 스트리밍 ( 사용자의 데이터 과금 가능성 때문에 )
 
+- [ ] TEST
