--- a/강의 자료/문서 정리/0102 월요일.md
+++ b/강의 자료/문서 정리/0102 월요일.md
@@ -22,9 +22,9 @@
 4. 오디오 스트리밍 ( 사용자의 데이터 과금 가능성 때문에 )
 
 ## < 프로토타이핑 >
-1월 18일까지 팀별 프로토타이핑을 하여, 포스터로 만들어 전시. 
+1월 18일까지 팀별 프로토타이핑을 하여, 포스터로 만들어 전시  
 프로토타이핑은 Xcode의 UI 개발툴로 만들어야 함
 
 ## < 실제 개발 >
-2월 중반까지 실제로 개발하여 발표. 
+2월 중반까지 실제로 개발하여 발표  
 앱스토어에 올려도 무방
