--- a/강의 자료/문서 정리/0103 화요일.md
+++ b/강의 자료/문서 정리/0103 화요일.md
@@ -24,14 +24,75 @@
 	현대에는 씨디를 사용하지 않아서 뺌!
 
 ## < HIG 3개 대표적 원칙 >
-1. Deference
-2. Clarity
-3. Depth
+1. **Deference**
+2. **Clarity**
+3. **Depth**
 
 ## < 토론 주제 >
 > 안드로이드와 아이폰의 기본 계산기 중 어느 계산기가 좋은가?  
 
-3명 다 안드로이드의 기본 계산기가 훨씬 낫다.  
-왜냐하면, 안드로이드의 기본 계산기는 한 숫자를 지우는 버튼이 있다.  
-반면에, 아이폰은 한 숫자 지우기가 아니라, 모든 숫자가 지워지는 버튼만 있다.  
+3명 다 안드로이드의 기본 계산기가 훨씬 낫다고 생각한다.  
+왜냐하면 안드로이드의 기본 계산기는 한 숫자를 지우는 버튼이 있다.  
+반면에 아이폰은 한 숫자 지우기가 아니라, 모든 숫자가 지워지는 버튼만 있다.  
 그리고 안드로이드의 기본 계산기는 중간 숫자를 지울 수도 있다.
+
+## < HIG 핵심 >
+* iOS HIG & OS X HIG & Android Design
+
+### Deference
+* 존중, 숭배
+* 모두 콘텐츠 앞에 무릎을 꿇어라
+* 사용자는 콘텐츠를 위해 앱을 사용하는 것 일 뿐
+→ UI << Contents  
+사용자의 입장에서 콘텐츠보다 UI에 눈길을 끌면 안된다.  
+  
+**< 실천 >**
+* 전체 스크린을 활용하라
+* 물리적 / 사실주의적 시각 인디케이터들 재고
+* 반투명한 뷰는 그 뒤의 콘텐츠에 힌트 제공
+
+### Clarity
+* 명료함
+
+**< 실천 >**
+* 여백을 많이 사용하라. ( 흰색, `Negative Space` )
+* 색상을 통해 UI를 단순화 하라 ( iOS 7 이후로 레이블과 버튼의 구분이 없어짐 → Key Color 를 통해 레이블을 버튼이라고 사용자에게 인식하게 해줌 )  
+따라서 Bar 영역에 있는 색상있는 것들은 왠만하면, 버튼
+* 시스템 폰트로 가독성을 높여라 ( iOS 기본 폰트은 자간 등을 자동으로 관리해주기 때문 )
+
+### Depth
+* 떠있는 느낌, 줌인과 줌 아웃 기능
+
+### 레이아웃을 이용한 소통
+* 아이폰은 좌상단이 가장 중요한 포인트. ( 아이패드는 중앙 )
+* 시각적 무게와 균형을 맞춰라 ( 종과 행의 비를 잘 맞춰야 함! )
+* 정렬의 중요성
+* 중요한 콘텐츠는 기본 사이즈에서 이해할 수 있어야 한다. ( 테이블뷰에서 글씨가 너무 작아 들어가서 봐야된다는지.. 지양 )
+* 글자 크기 변화에 대비하라
+* UI 모양의 불일치를 피해라
+* 애플에서 터치영역 보정 자동으로 해줌
+* 컨트롤 간의 충분한 여백 : 44 X 44 ( 엄지로 신경 안쓰게 누를 수 있는, ex. 밀어서 잠금해
+제, 통화끊기 )
+
+### 시작과 종료
+* 스플래시 이미지는 쓰지 마라. 아무 필요가 없다.
+  
+**< 질문들 >**
+* 스플래시 이미지를 통해 사용자에게 줄 수 있는 것은?
+* 기억에 남을 만큼 인상적이었던 스플래시 이미지는?
+* 속도가 빨라서 ‘가볍다’ 라고 느낀 앱에 스플래시 이미지가 있나요?
+  
+* 따라서, `런치 이미지`를 씁시다. ( 인지과학의 연구결과로 사용자가 더 빠르다고 느낌 )
+* 생산성 앱, 유틸리티 앱은 필요가 없지만, 게임 및 영화 관련 몰입성이 중요한 장르의 앱인 경우는 스플래시 이미지를 써도 된다. ( 분위기 환기용 )
+
+### 시동시 설정 값 요청
+을 피하고 대신에,
+* 사용자 80%의 요청에 맞춰 솔루션 집중
+* 다른 소스로부터 최대한 정보를 얻는다.
+* 필수적이라면, 앱 안에서 입력하도록 한다.
+  
+**< 실수 >**
+* 앱의 홈은 필요가 없다.
+  
+**< 가장 좋은 앱 >**
+* 나의 컨텍스트를 이해한 상태에서 앱을 켜자마자 끄는 것, 또는 한 번의 탭으로 원하는 정보를 얻어가고 끌 수 있는 것.
